--- a/statapps/index.html
+++ b/statapps/index.html
@@ -115,9 +115,11 @@
 		<div class="mainbody">
 			<div id="infoText">
 				<h3> About </h3>
-				<p> These applets help people learn statistics through dynamic and interactive visualizations.  They are built using the JavaScript library <a href=http://d3js.org/> D3.js</a>. </p>
+				<p> These applets help people learn statistics through dynamic and interactive visualizations.  They are built using the JavaScript library <a href=http://d3js.org/> D3.js</a>. 
+					Created by <a href=http://maoihu.com>Mao Hu</a> for the Coursera course Teaching Statistical Thinking.
+				</p>
 				
-				<p> These in-browser applets work on computers and mobile devices such as smartphones and tablets.</p>
+				<p> These in-browser applets work on computers and mobile devices such as smartphones and tablets.  They require no installation of software or computer programming knowledge.</p>
 				
 				<p> Supported by the <a href="https://bassconnections.duke.edu/">Bass Connections</a> initiative at <a href="http://duke.edu/">Duke University</a>.  
 				Part of the <a href=https://bassconnections.duke.edu/project-teams/creating-online-education-k-12-teachers-probability-and-statistics-common-core%E2%80%A8> 
