--- a/statapps/mosaic_plot/mosaic_plot.html
+++ b/statapps/mosaic_plot/mosaic_plot.html
@@ -13,7 +13,7 @@
 	</script>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-        <title>Mosaic Plot</title>
+        <title>Mosaic Plot Game</title>
 		<link type="text/css" rel="stylesheet" href="mosaic_plot.css" />
         <script src="d3/d3.v3.js"></script>
     </head>
@@ -26,7 +26,7 @@
 		var body = d3.select("body").append("div").attr("class","mainbody");
 		
 		//title
-		body.append("h1").attr("id","heading").text("Mosaic Plot");
+		body.append("h1").attr("id","heading").text("Mosaic Plot Game");
 		
 		//define margins and size of chart
 		var margin = {top: 40, right: 60, bottom: 40, left: 60},
@@ -58,7 +58,8 @@
 		
 		//instructional text
 		controlpanel.append("p").text("Instructions").attr("class","paragraphText2");
-		controlpanel.append("p").text("Drag the rectangles to reflect the marginal and conditional distributions of the data in the contingency table.").attr("class","paragraphText");
+		controlpanel.append("p").text("Step 1: Drag the rectangles to reflect the marginal distribution of the data in the contingency table.").attr("class","paragraphText");
+		controlpanel.append("p").text("Step 2: Drag the rectangles to match the conditional distributions.").attr("class","paragraphText");
 		
 		//reset button
 		controlpanel.append("input")
@@ -123,7 +124,7 @@
 			
 			
 			if( Math.abs(data1[0].x - targetdata1[0].x) < 10){
-				displayText = [{display: "Correct! Now try drawing the conditional distributions:", color: "green"}];
+				displayText = [{display: "Step 2: Now draw the conditional distributions!", color: "green"}];
 				updateDisplay(displayText);
 				updateChart([],data2, targetdata);
 			}
@@ -233,7 +234,7 @@
 		var targetdata=generateCounts(),
 			targetdata1 = calcData1(targetdata),
 			targetdata2 = calcData2(targetdata),
-			displayText = [{display: "Click and drag!", color: "black"}];
+			displayText = [{display: "Step 1: Click and drag the plot to match the table!", color: "black"}];
 
 			
 		updateChart(data1,[], targetdata);
@@ -254,11 +255,13 @@
 			display.enter()
 				.append("g")
 				.attr("class","display")
-				.attr("transform", "translate(5,-10)")
+				.attr("transform", "translate("+width/2+",-10)")
 				.append("text")
 				.text(function(d) {return d.display;})
+				.attr("text-anchor", "middle")
 				.attr("fill", function(d){return d.color;})
-				.attr("font-family","sans-serif");
+				.attr("font-family","sans-serif")
+				.attr("font-weight", "bold");
 		
 		
 		}
@@ -331,7 +334,7 @@
 				.attr("transform", function(d,i){return "translate(0 ,0)";})
 				.attr("width",function(d){return d.x;})
 				.attr("height",height)
-				.attr("fill", "purple")
+				.attr("fill", "MediumPurple")
 				.attr("fill-opacity", 0)
 				.attr("stroke", "white")
 				.attr("stroke-width", 6)
@@ -343,7 +346,7 @@
 				.attr("transform", function(d,i){return "translate("+width+",0) scale(-1,1)";})
 				.attr("width",function(d){return width-d.x;})
 				.attr("height",height)
-				.attr("fill", "purple")
+				.attr("fill", "MediumPurple")
 				.attr("fill-opacity", 0)
 				.attr("stroke", "white")
 				.attr("stroke-width", 6)
@@ -418,7 +421,7 @@
 					.attr("transform", function(d,i){return "translate("+(i*width)+",0) scale("+((1-i)*1+i*(-1))+",1)";})
 					.attr("width",function(d,i){return (1-i)*d.x+i*(width-d.x);})
 					.attr("height",function(d){return d.y;})
-					.attr("fill", "blue")
+					.attr("fill", "SteelBlue")
 					.attr("fill-opacity", 0)
 					.attr("stroke", "white")
 					.attr("stroke-width", 6)
@@ -430,7 +433,7 @@
 					.attr("transform", function(d,i){return "translate("+(i*width)+","+height+") scale("+((1-i)*1+i*(-1))+",-1)";})
 					.attr("width",function(d,i){return (1-i)*d.x+i*(width-d.x);})
 					.attr("height",function(d){return height-d.y;})
-					.attr("fill", "red")
+					.attr("fill", "IndianRed")
 					.attr("fill-opacity", 0)
 					.attr("stroke", "white")
 					.attr("stroke-width", 6)
@@ -486,8 +489,12 @@
 		</script>
 		
 		<div class="mainbody">
-			<p class=paragraphText2>Discussion Question</p>
-			<p class=paragraphText>What do the areas of the rectangles represent?</p>
+			<p class=paragraphText2>Discussion Questions</p>
+			<p class=paragraphText>Step 1:</p>
+			<p class=paragraphText>What do the areas of the purple rectangles represent?</p>
+			<p class=paragraphText>Step 2:</p>
+			<p class=paragraphText>What does the area of the blue rectangle in the top right represent?</p>
+			<p class=paragraphText>What does the combined area of the two red rectangles represent?</p>
 			<div id="infoText">
 				<p> Adapted from Mike Bostock's <a href="http://bl.ocks.org/mbostock/9669633">Multitouch Drag II</a> example.
 				</p>
