--- a/ggw_puds_map/index.html
+++ b/ggw_puds_map/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
 <h1>Map of Planned Unit Developments in the District of Columbia</h1>
@@ -9,7 +10,7 @@
 	Map by Mao Hu, using the <a href="https://rstudio.github.io/leaflet/">Leaflet</a> package for R.
 </p>
 
-<iframe src="http://mih5.github.io/ggw_puds_map/map"> </iframe>
+<iframe src="http://mih5.github.io/ggw_puds_map/map" width="500px" height="500px"> </iframe>
 
 </body>
 </html>
