Updated index page

--- a/index.html
+++ b/index.html
@@ -2,29 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Statistics Applets</title>
+        <title>Mao Hu</title>
 		<link type="text/css" rel="stylesheet" href="styling.css" />
     </head>
     <body>
+		<h1> Mao Hu </h1>
 		<div id="container">
-		<h1> Statistics Applets </h1>
-			<a href="http://mih5.github.io/statapps/"> New webpage </a>
-			<div margin-bottom="30">
-				<h2> Univariate Graphics and Statistics </h2>
-				<div class="innerdiv"> <a href="/mean/mean.html">Mean <br><img src="mean.PNG" width="120" height="120" border="1"/></a> </div>
-				<div class="innerdiv"> <a href="/standard_deviation/standard_deviation.html">Standard Deviation <br> <img src="sd.PNG" width="120" height="120" border="1"/> </a> </div>
-			</div>
-			<div margin-bottom="30">
-				<h2> Bivariate Graphics and Statistics </h2>
-				<div class="innerdiv"><a href="/correlation_game2/correlationgame.html">Correlation <br> <img src="correlation.PNG" width="120" height="120" border="1"/></a> </div>
-				<div class="innerdiv"><a href="/mosaic_plot/mosaic_plot.html">Mosaic Plot <br> <img src="mosaic.PNG" width="120" height="120" border="1"/></a> </div>
-			</div>
-			<div margin-bottom="30">
-				<h2> Regression </h2>
-				<a href="/linear_regression/linear_regression.html">Linear Regression <br> <img src="linear.PNG" width="120" height="120" border="1"/></a> 
-			</div>
-		</div>
-        <script>
-		</script>
+			<h2> <a href="http://mih5.github.io/ggw_puds_map/"> District of Columbia Planned Unit Development Map (2016) </a> </h2> </br>			
+			<h2> <a href="http://mih5.github.io/statapps/"> Statistics Applets (2014) </a> </h2>			
+        </div>
     </body>
 </html>     
